output/server/_dllproject/DirectExport.h

    QTTESTINGSERVER_EXPORT int nativeImplInit(
		niClientFuncExec clientFuncExec,
		niClientMethodExec clientMethodExec,
		niClientResourceRelease clientResourceRelease,
		niClientClearSafetyArea clientClearSafetyArea
	);
	QTTESTINGSERVER_EXPORT void nativeImplShutdown();
	QTTESTINGSERVER_EXPORT ni_ModuleRef getModule(const char* name);
	QTTESTINGSERVER_EXPORT ni_ModuleMethodRef getModuleMethod(ni_ModuleRef m, const char* name);
	QTTESTINGSERVER_EXPORT ni_InterfaceRef getInterface(ni_ModuleRef m, const char* name);
	QTTESTINGSERVER_EXPORT ni_InterfaceMethodRef getInterfaceMethod(ni_InterfaceRef iface, const char* name);
	QTTESTINGSERVER_EXPORT ni_ExceptionRef getException(ni_ModuleRef m, const char* name);
	QTTESTINGSERVER_EXPORT void invokeModuleMethod(ni_ModuleMethodRef method);
	QTTESTINGSERVER_EXPORT ni_ExceptionRef invokeModuleMethodWithExceptions(ni_ModuleMethodRef method);
	QTTESTINGSERVER_EXPORT void pushPtr(void* value);
	QTTESTINGSERVER_EXPORT void* popPtr();
	QTTESTINGSERVER_EXPORT void pushPtrArray(void** values, size_t count);
	QTTESTINGSERVER_EXPORT void popPtrArray(void*** values, size_t* count);
	QTTESTINGSERVER_EXPORT void pushSizeT(size_t value);
	QTTESTINGSERVER_EXPORT size_t popSizeT();
	QTTESTINGSERVER_EXPORT void pushSizeTArray(size_t* values, size_t count);
	QTTESTINGSERVER_EXPORT void popSizeTArray(size_t** values, size_t* count);
	QTTESTINGSERVER_EXPORT void pushBool(bool value);
	QTTESTINGSERVER_EXPORT bool popBool();
	QTTESTINGSERVER_EXPORT void pushBoolArray(bool* values, size_t count);
	QTTESTINGSERVER_EXPORT void popBoolArray(bool** values, size_t* count);
	QTTESTINGSERVER_EXPORT void pushInt8(int8_t x);
	QTTESTINGSERVER_EXPORT int8_t popInt8();
	QTTESTINGSERVER_EXPORT void pushInt8Array(int8_t* values, size_t count);
	QTTESTINGSERVER_EXPORT void popInt8Array(int8_t** values, size_t* count);
	QTTESTINGSERVER_EXPORT void pushUInt8(uint8_t x);
	QTTESTINGSERVER_EXPORT uint8_t popUInt8();
	QTTESTINGSERVER_EXPORT void pushUInt8Array(uint8_t* values, size_t count);
	QTTESTINGSERVER_EXPORT void popUInt8Array(uint8_t** values, size_t* count);
	QTTESTINGSERVER_EXPORT void pushInt16(int16_t x);
	QTTESTINGSERVER_EXPORT int16_t popInt16();
	QTTESTINGSERVER_EXPORT void pushInt16Array(int16_t* values, size_t count);
	QTTESTINGSERVER_EXPORT void popInt16Array(int16_t** values, size_t* count);
	QTTESTINGSERVER_EXPORT void pushUInt16(uint16_t x);
	QTTESTINGSERVER_EXPORT uint16_t popUInt16();
	QTTESTINGSERVER_EXPORT void pushUInt16Array(uint16_t* values, size_t count);
	QTTESTINGSERVER_EXPORT void popUInt16Array(uint16_t** values, size_t* count);
	QTTESTINGSERVER_EXPORT void pushInt32(int32_t x);
	QTTESTINGSERVER_EXPORT int32_t popInt32();
	QTTESTINGSERVER_EXPORT void pushInt32Array(int32_t* values, size_t count);
	QTTESTINGSERVER_EXPORT void popInt32Array(int32_t** values, size_t* count);
	QTTESTINGSERVER_EXPORT void pushUInt32(uint32_t x);
	QTTESTINGSERVER_EXPORT uint32_t popUInt32();
	QTTESTINGSERVER_EXPORT void pushUInt32Array(uint32_t* values, size_t count);